welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:13: error: method goAndGet is defined twice
  conflicting symbols both originated in file 'plm.runtime1.Methods'
def goAndGet() {
    ^