welcome.lessons.welcome.methods.basics.Methods.scala.code
def goAndGet(){
  var nbPas: Int= 0
  var x:Int = 0
  while(!estSurBiscuit()){
    avance()
    nbPas = nbPas+1
  }
  prendBiscuit()
  for(x<- 1 to nbPas){recule()}
  poseBiscuit()
}

def goAndGet() {
}

for (i <- 1 to 7) {
    goAndGet();
    right();
    forward();
    left();
}